[package]
name = "ics11-beefy"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <david.salami@gmail.com>"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "ibc/std",
    "ibc-proto/std",
    "beefy-client/std",
    "beefy-client-primitives/std",
    "pallet-mmr-primitives/std",
    "beefy-primitives/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-core/std",
    "sp-std/std",
    "sp-trie/std",
    "sp-io/std",
    "codec/std",
    "prost/std",
    "serde/std",
    "bytes/std",
    "tendermint/std",
]


[dependencies]
# ibc deps
ibc = { git = "https://github.com/ComposableFi/ibc-rs", rev = "af5bb83fc4ba3585a04489ac3dde1f7ed79e2c65", default-features = false }
ibc-proto = { git = "https://github.com/ComposableFi/ibc-rs", rev = "af5bb83fc4ba3585a04489ac3dde1f7ed79e2c65", default-features = false }

# beefy deps
beefy-client = { package = "beefy-light-client", path = "../../algorithms/beefy",  default-features = false }
beefy-client-primitives = { package = "primitives", path = "../../algorithms/beefy/primitives", default-features = false }

# substrate deps
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

# crates.io
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
prost = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false }
bytes = { version = "1.1.0", default-features = false }
derive_more = { version = "0.99.17", features = ["from"] }

[dependencies.tendermint]
git = "https://github.com/composableFi/tendermint-rs"
rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8"
default-features = false

[dependencies.tendermint-proto]
git = "https://github.com/composableFi/tendermint-rs"
rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8"
default-features = false
