[package]
name = "ics13-near"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
	"flex-error/std",
	"flex-error/eyre_tracer",
	"ibc-proto/std",
	"ics23/std",
	"clock",
	"parity-scale-codec/std",
	"ibc/std",
	"sp-core/std",
	"borsh/std",
	"bytes/std",
	"num-traits/std",
	"prost/std",
	"ripemd?/std",
	"serde/std",
	"serde_json/std",
	"sha2/std",
	"sha3?/std",
	"subtle-encoding/std",
	"tendermint/std",
	"time/std",
	"tracing/std",
	"tracing-subscriber/std",
	"uint/std"
]
clock = ["tendermint/clock", "time/std", "ibc/clock"]

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["clock", "std", "sha3", "ripemd", "ibc/mocks"]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
borsh = { version = "0.10.3", default-features = false }
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { workspace = true }
ibc-derive = { path = "../../ibc/derive", default-features = false }
ics23 = { workspace = true }
time = { workspace = true }
serde_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
safe-regex = { version = "0.2.5", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
uint = { version = "0.9", default-features = false }
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
sha3 = { version = "0.10.1", optional = true }
ripemd = { version = "0.1.1", optional = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }

[dev-dependencies]
ibc = { path = "../../ibc/modules", features = ['mocks'] }
env_logger = { workspace = true }
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.10", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.2" }
tendermint-rpc = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", features = ["http-client", "websocket-client"] }
tendermint-testgen = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1" } # Needed for generating (synthetic) light blocks.
tokio = { version = "1.32.0", features = ["full"] }
serde_json = { workspace = true }
sha3 = { version = "0.10.1" }
ripemd = { version = "0.1.1" }
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
